// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Channel Breadcrumbs > should render correctly for path 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-70qvj9"
  >
    <span
      aria-label="Catalogue Home"
      class=""
      data-mui-internal-clone-element="true"
    >
      <button
        aria-label="navigate to catalogue home"
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-53g0n7-MuiButtonBase-root-MuiIconButton-root"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="HomeIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
          />
        </svg>
      </button>
    </span>
    <nav
      aria-label="breadcrumb"
      class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-fxix4h-MuiTypography-root-MuiBreadcrumbs-root"
    >
      <ol
        class="MuiBreadcrumbs-ol css-1uwp4ue-MuiBreadcrumbs-ol"
      >
        <li
          class="MuiBreadcrumbs-li"
        >
          <div
            class="MuiBox-root css-8zy5qf"
          />
        </li>
        <li
          aria-hidden="true"
          class="MuiBreadcrumbs-separator css-jhr02i-MuiBreadcrumbs-separator"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
            data-testid="NavigateNextIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
        </li>
        <li
          class="MuiBreadcrumbs-li"
        >
          <a
            aria-label="test"
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1orsvah-MuiTypography-root-MuiLink-root"
            href="#"
          >
            <p
              aria-label="test"
              class="MuiTypography-root MuiTypography-body1 css-dbkvtt-MuiTypography-root"
              data-mui-internal-clone-element="true"
              role="tooltip"
            >
              test
            </p>
          </a>
        </li>
        <li
          aria-hidden="true"
          class="MuiBreadcrumbs-separator css-jhr02i-MuiBreadcrumbs-separator"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
            data-testid="NavigateNextIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
        </li>
        <li
          class="MuiBreadcrumbs-li"
        >
          <p
            aria-label="path"
            class="MuiTypography-root MuiTypography-body1 css-su6c9i-MuiTypography-root"
            data-mui-internal-clone-element="true"
            role="tooltip"
          >
            path
          </p>
        </li>
      </ol>
    </nav>
  </div>
</DocumentFragment>
`;

exports[`Channel Breadcrumbs > should render correctly for path when the subtree length is longer than 5 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-70qvj9"
  >
    <span
      aria-label="Catalogue Home"
      class=""
      data-mui-internal-clone-element="true"
    >
      <button
        aria-label="navigate to catalogue home"
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-53g0n7-MuiButtonBase-root-MuiIconButton-root"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="HomeIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
          />
        </svg>
      </button>
    </span>
    <nav
      aria-label="breadcrumb"
      class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-fxix4h-MuiTypography-root-MuiBreadcrumbs-root"
    >
      <ol
        class="MuiBreadcrumbs-ol css-1uwp4ue-MuiBreadcrumbs-ol"
      >
        <li
          class="MuiBreadcrumbs-li"
        >
          <div
            class="MuiBox-root css-8zy5qf"
          />
        </li>
        <li
          aria-hidden="true"
          class="MuiBreadcrumbs-separator css-jhr02i-MuiBreadcrumbs-separator"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
            data-testid="NavigateNextIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
        </li>
        <li
          class="MuiBreadcrumbs-li"
        >
          <div
            class="MuiBox-root css-8zy5qf"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="MoreHorizIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2"
              />
            </svg>
          </div>
        </li>
        <li
          aria-hidden="true"
          class="MuiBreadcrumbs-separator css-jhr02i-MuiBreadcrumbs-separator"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
            data-testid="NavigateNextIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
        </li>
        <li
          class="MuiBreadcrumbs-li"
        >
          <a
            aria-label="test"
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1orsvah-MuiTypography-root-MuiLink-root"
            href="#"
          >
            <p
              aria-label="test"
              class="MuiTypography-root MuiTypography-body1 css-1oz0j2q-MuiTypography-root"
              data-mui-internal-clone-element="true"
              role="tooltip"
            >
              test
            </p>
          </a>
        </li>
        <li
          aria-hidden="true"
          class="MuiBreadcrumbs-separator css-jhr02i-MuiBreadcrumbs-separator"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
            data-testid="NavigateNextIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
        </li>
        <li
          class="MuiBreadcrumbs-li"
        >
          <a
            aria-label="path"
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1orsvah-MuiTypography-root-MuiLink-root"
            href="#"
          >
            <p
              aria-label="path"
              class="MuiTypography-root MuiTypography-body1 css-1oz0j2q-MuiTypography-root"
              data-mui-internal-clone-element="true"
              role="tooltip"
            >
              path
            </p>
          </a>
        </li>
        <li
          aria-hidden="true"
          class="MuiBreadcrumbs-separator css-jhr02i-MuiBreadcrumbs-separator"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
            data-testid="NavigateNextIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
        </li>
        <li
          class="MuiBreadcrumbs-li"
        >
          <a
            aria-label="test"
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1orsvah-MuiTypography-root-MuiLink-root"
            href="#"
          >
            <p
              aria-label="test"
              class="MuiTypography-root MuiTypography-body1 css-1oz0j2q-MuiTypography-root"
              data-mui-internal-clone-element="true"
              role="tooltip"
            >
              test
            </p>
          </a>
        </li>
        <li
          aria-hidden="true"
          class="MuiBreadcrumbs-separator css-jhr02i-MuiBreadcrumbs-separator"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
            data-testid="NavigateNextIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
        </li>
        <li
          class="MuiBreadcrumbs-li"
        >
          <a
            aria-label="path"
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1orsvah-MuiTypography-root-MuiLink-root"
            href="#"
          >
            <p
              aria-label="path"
              class="MuiTypography-root MuiTypography-body1 css-1oz0j2q-MuiTypography-root"
              data-mui-internal-clone-element="true"
              role="tooltip"
            >
              path
            </p>
          </a>
        </li>
        <li
          aria-hidden="true"
          class="MuiBreadcrumbs-separator css-jhr02i-MuiBreadcrumbs-separator"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
            data-testid="NavigateNextIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
        </li>
        <li
          class="MuiBreadcrumbs-li"
        >
          <p
            aria-label="test"
            class="MuiTypography-root MuiTypography-body1 css-1jw5v3-MuiTypography-root"
            data-mui-internal-clone-element="true"
            role="tooltip"
          >
            test
          </p>
        </li>
      </ol>
    </nav>
  </div>
</DocumentFragment>
`;

exports[`Channel Breadcrumbs > should render correctly for root 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-70qvj9"
  >
    <span
      aria-label="Catalogue Home"
      class=""
      data-mui-internal-clone-element="true"
    >
      <button
        aria-label="navigate to catalogue home"
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-53g0n7-MuiButtonBase-root-MuiIconButton-root"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="HomeIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
          />
        </svg>
      </button>
    </span>
    <nav
      aria-label="breadcrumb"
      class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-fxix4h-MuiTypography-root-MuiBreadcrumbs-root"
    >
      <ol
        class="MuiBreadcrumbs-ol css-1uwp4ue-MuiBreadcrumbs-ol"
      >
        <li
          class="MuiBreadcrumbs-li"
        >
          <div
            class="MuiBox-root css-8zy5qf"
          />
        </li>
      </ol>
    </nav>
  </div>
</DocumentFragment>
`;
